@@ -1,5 +1,6 @@
 
 0.9.9d Nov 08, 2004
+ * during --dist-upgrade, dist-upgrade loop now happens before regular upgrade
  * updated --install target to assume package being requested is higher priority
    than existing installed package when there is a conflict
  * updated is_conflicted() to return the conflicted pkg;
